<resources>
    <string name="app_name">骑车宝</string>
    <string name="action_settings">Settings</string>
    <!--mainActivity-->
    <string name="login">登录</string>
    <string name="edittext_userName">请输入用户名</string>
    <string name="edittext_passward">请输入密码</string>
    <string name="checkbox_passward">记住密码</string>
    <string name="checkbox_login">自动登录</string>
    <string name="button_login">登录</string>
    <string name="textview_register">没有账号？立即注册</string>
    <string name="toast_login">用户名或者密码不能为空</string>
    <!--homeActivity-->
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_menu_find">首页</string>
    <string name="tab_menu_weather">金华天气</string>
    <string name="tab_menu_mine">我的</string>
    <!--findFragment-->
    <string name="grid_campus">校园新闻</string>
    <string name="grid_life">生活指南</string>
    <string name="grid_play">游玩指南</string>
    <string name="grid_job">就业指南</string>
    <string name="grid_schedule">学生课表</string>
    <string name="grid_lostandfind">失物招领</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_register">注册</string>

    <!--regiserActivity-->
    <string name="register_username">用户名</string>
    <string name="registe_passward">密码</string>
    <string name="register_conform_passward">确认密码</string>
    <string name="register_register">注册</string>

    <!--mineFragment-->
    <string name="mine_exit_login">退出登录</string>

    <!-- CampusGuideActivity-->
    <string name="school_in_news">校内新闻</string>
    <string name="school_out_news">校外新闻</string>
    <!--layout&#45;&#45;news_item-->
    <string name="news_name">新闻名称</string>
    <string name="news_time">新闻发布时间</string>

    <string name="title_activity_campus_news">CampusNewsActivity</string>
    <string name="title_activity_life">LifeActivity</string>
    <string name="title_activity_study_guide">StudyGuideActivity</string>
    <string name="title_activity_single_study">SingleStudyActivity</string>
    <string name="title_activity_play_guide">PlayGuideActivity</string>
    <string name="title_activity_single_play">SinglePlayActivity</string>

    <string name="action_Jinhua">金华</string>
    <string name="action_Hangzhou">杭州</string>
    <string name="action_Ningbo">宁波</string>
    <string name="action_Wenzhou">温州</string>
    <string name="action_Shaoxing">绍兴</string>
    <string name="action_Huzhou">湖州</string>
    <string name="action_Jiaxing">嘉兴</string>
    <string name="action_Quzhou">衢州</string>
    <string name="action_Taizhou">台州</string>
    <string name="action_Lishui">丽水</string>
    <string name="action_Zhoushan">舟山</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_single_news">SingleNewsActivity</string>

    <!--content_single_news-->
    <string name="summary">摘要</string>
    <string name="content">内容</string>


</resources>
