<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.bikeapp.xueyi.mybikeapp.MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/ic_launcher"/>

    <EditText
        android:id="@+id/et_userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edittext_userName"
        android:drawableLeft="@mipmap/ic_launcher"/>

    <EditText
        android:id="@+id/et_passward"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/edittext_passward"
        android:drawableLeft="@mipmap/ic_launcher"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/cb_remember"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_passward"
            />
        <CheckBox
            android:id="@+id/cb_loginSelf"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_login"
            />
    </LinearLayout>
    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:background="@color/blue"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="right"
        android:text="@string/button_login"
        />
    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dip"
        android:paddingBottom="10dp"
        android:text="@string/textview_register"/>
</LinearLayout>
