<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HomeActivity" >

    <RadioGroup
        android:id="@+id/rg_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rb_find"
            style="@style/tab_menu_item"
            android:drawableTop="@mipmap/ic_launcher"
            android:button="@null"
            android:text="@string/tab_menu_find" />

        <RadioButton
            android:id="@+id/rb_weather"
            style="@style/tab_menu_item"
            android:drawableTop="@mipmap/ic_launcher"
            android:button="@null"
            android:text="@string/tab_menu_weather" />

        <RadioButton
            android:id="@+id/rb_mine"
            style="@style/tab_menu_item"
            android:drawableTop="@mipmap/ic_launcher"
            android:text="@string/tab_menu_mine" />
    </RadioGroup>

    <android.support.v4.view.ViewPager
        android:layout_marginTop="8dp"
        android:id="@+id/vpager"
        android:layout_above="@id/rg_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</RelativeLayout>




